--- a/src/components/global/style/register.scss
+++ b/src/components/global/style/register.scss
@@ -15,7 +15,7 @@ $divider: get_color('light', 'divider');
 
 	@include with_title;
 	@include with_close;
-	@include withReturn;
+	@include with_return;
 
 	.footer_bar {
 		display: flex;
