--- a/src/components/header/style/index.module.scss
+++ b/src/components/header/style/index.module.scss
@@ -1,5 +1,6 @@
 @import 'header';
-@import 'userProfile';
-@import 'appCenter';
+@import 'user_profile';
+@import 'app_center';
+@import 'notification';
 @import 'search';
 @import 'branch';
