--- a/src/components/markdown/style/editor.scss
+++ b/src/components/markdown/style/editor.scss
@@ -10,7 +10,7 @@ $divider: get_color('light', 'divider');
 		padding: 0 1rem;
 		width: 100%;
 		height: 5rem;
-		background: get_color('light', 'backgroundVariant');
+		background: get_color('light', 'background_variant');
 
 		.tools {
 			display: flex;
