--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -8,19 +8,19 @@ $theme: (
 $color: (
 	light: (
 		background: #fff,
-		backgroundVariant: #f8f8f8,
-		textPrimary: #000000f2,
-		textSecondary: #3c3c4399,
+		background_variant: #f8f8f8,
+		text_primary: #000000f2,
+		text_secondary: #3c3c4399,
 		divider: rgba(#000, 0.1),
-		dividerVariant: rgba(#000, 0.14)
+		divider_variant: rgba(#000, 0.14)
 	),
 	black: (
 		background: #fff,
-		backgroundVariant: #f8f8f8,
-		textPrimary: #000000f2,
-		textSecondary: #3c3c4399,
+		background_variant: #f8f8f8,
+		text_primary: #000000f2,
+		text_secondary: #3c3c4399,
 		divider: rgba(#000, 0.1),
-		dividerVariant: rgba(#000, 0.14)
+		divider_variant: rgba(#000, 0.14)
 	)
 );
 
