--- a/src/components/article/style/article_card.scss
+++ b/src/components/article/style/article_card.scss
@@ -40,7 +40,7 @@ $divider: 1px solid get_color('light', 'divider');
 
 			> .title {
 				margin: 0;
-				color: get_color('light', 'textPrimary');
+				color: get_color('light', 'text_primary');
 				text-align: left;
 				font-size: 1.2rem;
 
@@ -56,7 +56,7 @@ $divider: 1px solid get_color('light', 'divider');
 				right: 1rem;
 				bottom: 1rem;
 				margin: 0;
-				color: get_color('light', 'textSecondary');
+				color: get_color('light', 'text_secondary');
 				font-size: 1.2rem;
 			}
 		}
