--- a/src/components/rightSider/style/author_panel.scss
+++ b/src/components/rightSider/style/author_panel.scss
@@ -1,6 +1,7 @@
-.author_card {
+.author_panel {
+	display: flex;
+	flex-direction: column;
 	padding: 1rem;
-	padding-bottom: 0;
 
 	.item {
 		padding-left: 1rem;
@@ -16,7 +17,7 @@
 
 		&.name_wrapper {
 			padding: 1rem;
-			height: 10rem;
+			height: 8rem;
 
 			> .avatar {
 				width: 5rem;
@@ -39,11 +40,31 @@
 				width: 12rem;
 
 				.name {
-					color: get_color('light', 'textPrimary');
+					color: get_color('light', 'text_primary');
 					font-weight: bold;
 					font-size: 1.6rem;
 				}
 			}
 		}
+	}
+
+	.contact_wrapper {
+		display: flex;
+		width: 100%;
+
+		button {
+			margin: 0 0.4rem;
+
+			svg {
+				color: get_color('light', 'text_secondary');
+				font-size: 2rem;
+			}
+		}
+	}
+
+	.footer {
+		display: flex;
+		flex-flow: row-reverse;
+		padding: 1rem;
 	}
 }
