--- a/src/pages/notFound/style/index.module.scss
+++ b/src/pages/notFound/style/index.module.scss
@@ -19,7 +19,7 @@
 				box-shadow: 0 1px 3px rgba(26, 26, 26, 0.1);
 
 				&:hover {
-					background: get_color('light', 'backgroundVariant');
+					background: get_color('light', 'background_variant');
 				}
 			}
 		}
