--- a/src/views/articleDetail/style/index.module.scss
+++ b/src/views/articleDetail/style/index.module.scss
@@ -10,6 +10,7 @@
 			width: 100%;
 			border: 1px solid get_color('light', 'divider');
 			border-radius: 0.6rem;
+			box-shadow: $small_shadow;
 		}
 
 		.info {
