--- a/src/views/articleUpload/style/article_info.scss
+++ b/src/views/articleUpload/style/article_info.scss
@@ -21,7 +21,7 @@ $divider: get_color('light', 'divider');
 		z-index: 1;
 		width: 16rem;
 		height: 10rem;
-		border-radius: 6px;
+		border-radius: 0.6rem;
 		box-shadow: $default_shadow;
 		cursor: pointer;
 
