--- a/src/components/markdown/style/index.module.scss
+++ b/src/components/markdown/style/index.module.scss
@@ -1,26 +1,2 @@
 @import './editor.scss';
-
-.code_wrapper {
-	display: block;
-	overflow-x: auto;
-	padding: 1rem;
-	border-radius: 6px;
-	background: get_color('light', 'background_variant');
-
-	code {
-		font-size: 1.3rem;
-		font-family: 'Roboto Mono';
-		line-height: 1.75em;
-	}
-}
-
-.pic {
-	display: flex;
-	justify-content: center;
-	width: 100%;
-
-	> img {
-		max-width: 80%;
-		max-height: 500px;
-	}
-}
+@import './markdown.scss';
