--- a/src/views/setting/style/account.scss
+++ b/src/views/setting/style/account.scss
@@ -6,12 +6,29 @@
 		}
 	}
 
+	.username_wrapper {
+		display: flex;
+		align-items: center;
+
+		$highlight: get_theme('primary');
+
+		> span {
+			margin-right: 2rem;
+		}
+
+		> button {
+			border: 1px solid $highlight;
+			background: #fff;
+			color: $highlight;
+		}
+	}
+
 	.avatar_wrapper {
 		display: flex;
 		align-items: center;
 
 		> img {
-			margin-right: 2rem;
+			margin-right: 1rem;
 			width: 5rem;
 			height: 5rem;
 			border-radius: 50%;
