--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -1,11 +1,11 @@
-$theme: (
+$themes: (
 	primary: #409eff,
 	success: #67c23a,
 	warning: #e6a23c,
 	error: #f56c6c
 );
 
-$color: (
+$colors: (
 	light: (
 		background: #fff,
 		background_variant: #f8f8f8,
