--- a/src/components/header/style/branch.scss
+++ b/src/components/header/style/branch.scss
@@ -1,6 +1,6 @@
-.branch {
+@include use_themes('.branch') {
 	> span {
-		color: get_theme('primary');
+		color: $highlight;
 		font-weight: bold;
 		font-size: 2.2rem;
 	}
