--- a/src/components/base/style/panel.scss
+++ b/src/components/base/style/panel.scss
@@ -1,8 +1,8 @@
 .panel {
 	min-height: 4rem;
 	width: 100%;
-	border: 1px solid get_color('light', 'divider');
+	border: 1px solid $divider;
 	border-radius: 0.6rem;
-	background: get_color('light', 'background');
+	background: $background;
 	box-shadow: $small_shadow;
 }
