--- a/src/views/articleUpload/style/article_info.scss
+++ b/src/views/articleUpload/style/article_info.scss
@@ -1,7 +1,5 @@
 @import 'common';
 
-$divider: get_color('light', 'divider');
-
 .article_info {
 	position: relative;
 	padding: 1rem;
@@ -9,7 +7,7 @@ $divider: get_color('light', 'divider');
 	width: 36rem;
 	border: 1px solid $divider;
 	border-radius: 0.6rem;
-	background: get_color('light', 'background');
+	background: $background;
 	box-shadow: $default_shadow;
 
 	@include with_title;
