--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -5,24 +5,12 @@ $themes: (
 	error: #f56c6c
 );
 
-$colors: (
-	light: (
-		background: #fff,
-		background_variant: #f8f8f8,
-		text_primary: #000000f2,
-		text_secondary: #3c3c4399,
-		divider: rgba(#000, 0.1),
-		divider_variant: rgba(#000, 0.14)
-	),
-	black: (
-		background: #fff,
-		background_variant: #f8f8f8,
-		text_primary: #000000f2,
-		text_secondary: #3c3c4399,
-		divider: rgba(#000, 0.1),
-		divider_variant: rgba(#000, 0.14)
-	)
-);
+$background: #fff;
+$background_variant: #f8f8f8;
+$text_primary: #000000f2;
+$text_secondary: #3c3c4399;
+$divider: rgba(#000, 0.1);
+$divider_variant: rgba(#000, 0.14);
 
 $z_header: 100;
 $z_footer: 200;
