--- a/src/assets/styles/preset.scss
+++ b/src/assets/styles/preset.scss
@@ -12,7 +12,7 @@ body {
 
 #root {
 	box-sizing: border-box;
-	color: get_color('light', 'text_primary');
+	color: $text_primary;
 	font-family: SF Pro Text, SF Pro Icons, PingFang SC, Helvetica, Arial, sans-serif;
 
 	-webkit-font-smoothing: antialiased;
