--- a/src/components/modal/style/login.scss
+++ b/src/components/modal/style/login.scss
@@ -1,6 +1,6 @@
 @import 'common';
 
-$divider: get_color('light', 'divider');
+$divider: $divider;
 
 .login_wrapper {
 	position: relative;
@@ -8,7 +8,7 @@ $divider: get_color('light', 'divider');
 	width: 34rem;
 	border: 1px solid $divider;
 	border-radius: 0.6rem;
-	background: get_color('light', 'background');
+	background: $background;
 	box-shadow: $default_shadow;
 
 	@include with_title;
@@ -35,7 +35,7 @@ $divider: get_color('light', 'divider');
 
 		@include use_themes('.go_register') {
 			margin-left: 4rem;
-			color: get_color('light', 'text_secondary');
+			color: $text_secondary;
 			text-decoration: underline;
 			font-size: 1.3rem;
 			cursor: pointer;
