--- a/src/views/setting/style/banner.scss
+++ b/src/views/setting/style/banner.scss
@@ -7,8 +7,8 @@
 	height: 4rem;
 	border-radius: 0.6rem;
 	background: $highlight;
-	box-shadow: $large_shadow;
-	color: get_color('light', 'background');
+	box-shadow: $default_shadow;
+	color: $background;
 
 	> span {
 		font-weight: bold;
