--- a/src/views/setting/style/options.scss
+++ b/src/views/setting/style/options.scss
@@ -1,5 +1,3 @@
-$divider: 1px solid get_color('light', 'divider');
-
 .options {
 	margin-bottom: 3rem;
 	width: 100%;
@@ -7,15 +5,15 @@ $divider: 1px solid get_color('light', 'divider');
 	> h1 {
 		margin-top: 0;
 		margin-bottom: 2rem;
-		color: get_color('light', 'text_secondary');
+		color: $text_primary;
 		font-size: 1.6rem;
 	}
 
 	.container {
 		min-height: 3rem;
-		border: $divider;
+		border: 1px solid $divider;
 		border-radius: 0.6rem;
-		background: get_color('light', 'background');
+		background: $background;
 		box-shadow: $small_shadow;
 
 		> li {
