--- a/src/components/article/style/article_card.scss
+++ b/src/components/article/style/article_card.scss
@@ -18,7 +18,7 @@
 
 		&:hover {
 			box-shadow: $large_shadow;
-			transform: translateY(-0.2rem);
+			transform: scale(1.02);
 
 			h3 {
 				color: $highlight;
