--- a/src/components/modal/style/login.scss
+++ b/src/components/modal/style/login.scss
@@ -4,12 +4,11 @@ $divider: $divider;
 
 .login_wrapper {
 	position: relative;
-	padding: 1rem;
-	width: 34rem;
+	padding: 4rem;
+	width: 38rem;
 	border: 1px solid $divider;
 	border-radius: 0.6rem;
 	background: $background;
-	box-shadow: $default_shadow;
 
 	@include with_title;
 	@include with_close;
@@ -26,15 +25,25 @@ $divider: $divider;
 		}
 	}
 
+	.submit_wrapper {
+		display: flex;
+		justify-content: center;
+		width: 100%;
+
+		.submit {
+			width: 100%;
+			height: 3.6rem;
+		}
+	}
+
 	.footer {
 		display: flex;
 		align-items: center;
+		flex-direction: column;
 		justify-content: space-between;
-		padding: 1rem 2rem 2rem 0;
 		width: 100%;
 
 		@include use_themes('.go_register') {
-			margin-left: 4rem;
 			color: $text_secondary;
 			text-decoration: underline;
 			font-size: 1.3rem;
