--- a/src/components/markdown/style/markdown.scss
+++ b/src/components/markdown/style/markdown.scss
@@ -16,13 +16,13 @@
 	.code_wrapper {
 		display: block;
 		overflow-x: auto;
-		padding: 1rem;
+		padding: 1rem 2rem;
 		border-radius: 0.6rem;
 		background: $background_variant;
 
 		code {
 			font-size: 1.3rem;
-			font-family: 'Roboto Mono';
+			font-family: 'SF Mono';
 			line-height: 1.75em;
 		}
 	}
