--- a/src/components/modal/style/login.scss
+++ b/src/components/modal/style/login.scss
@@ -3,20 +3,39 @@
 $divider: $divider;
 
 .login_wrapper {
-	position: relative;
-	padding: 4rem;
-	width: 38rem;
-	border: 1px solid $divider;
-	border-radius: 0.6rem;
+	width: 100%;
+	border-radius: inherit;
 	background: $background;
 
 	@include with_title;
 	@include with_close;
+	@include use_themes('.go_register') {
+		margin-top: 1.6rem;
+		width: 100%;
+		color: $text_secondary;
+		text-align: center;
+		text-decoration: underline;
+		font-size: 1.3rem;
+		cursor: pointer;
+		transition: color $normal;
+
+		&:hover {
+			color: $highlight;
+		}
+	}
 
 	.avatar_wrapper {
-		height: 12rem;
+		margin-bottom: 1.6rem;
 
 		@include flex_center;
+
+		> div:first-child {
+			display: inline-flex;
+			align-items: center;
+			justify-content: center;
+			width: 7rem;
+			height: 7rem;
+		}
 
 		> img {
 			width: 7rem;
@@ -25,34 +44,8 @@ $divider: $divider;
 		}
 	}
 
-	.submit_wrapper {
-		display: flex;
-		justify-content: center;
+	.submit {
 		width: 100%;
-
-		.submit {
-			width: 100%;
-			height: 3.6rem;
-		}
-	}
-
-	.footer {
-		display: flex;
-		align-items: center;
-		flex-direction: column;
-		justify-content: space-between;
-		width: 100%;
-
-		@include use_themes('.go_register') {
-			color: $text_secondary;
-			text-decoration: underline;
-			font-size: 1.3rem;
-			cursor: pointer;
-			transition: color $normal;
-
-			&:hover {
-				color: $highlight;
-			}
-		}
+		height: 4rem;
 	}
 }
