--- a/src/components/modal/style/modal.scss
+++ b/src/components/modal/style/modal.scss
@@ -18,4 +18,11 @@
 
 		@include glass;
 	}
+
+	.content {
+		position: relative;
+		padding: 4rem;
+		width: 36rem;
+		border-radius: 0.6rem;
+	}
 }
