--- a/src/components/modal/style/profile.scss
+++ b/src/components/modal/style/profile.scss
@@ -3,14 +3,8 @@
 $divider: $divider;
 
 .profile_wrapper {
-	position: relative;
-	display: flex;
-	align-items: center;
-	flex-direction: column;
-	padding: 4rem 1rem 2rem 1rem;
-	width: 36rem;
-	border: 1px solid $divider;
-	border-radius: 0.6rem;
+	width: 100%;
+	border-radius: inherit;
 	background: $background;
 
 	@include with_title;
@@ -20,17 +14,15 @@ $divider: $divider;
 	.avatar_wrapper {
 		position: relative;
 		overflow: hidden;
-		margin: 2rem 1rem;
-		width: 8rem;
-		height: 8rem;
+		margin-bottom: 1.6rem;
 		border-radius: 50%;
 		cursor: pointer;
 
 		@include flex_center;
 
 		> img {
-			width: 100%;
-			height: 100%;
+			width: 8rem;
+			height: 8rem;
 			border-radius: inherit;
 			vertical-align: text-top;
 
@@ -39,8 +31,8 @@ $divider: $divider;
 
 		> .upload_cover {
 			position: absolute;
-			width: 100%;
-			height: 100%;
+			width: 8rem;
+			height: 8rem;
 			border-radius: inherit;
 			color: #fff;
 
@@ -53,10 +45,9 @@ $divider: $divider;
 			}
 		}
 	}
-
-	.complete {
-		svg {
-			font-size: 1.6rem !important;
-		}
+	.footer_bar {
+		display: flex;
+		justify-content: center;
+		width: 100%;
 	}
 }
