--- a/src/components/modal/style/register.scss
+++ b/src/components/modal/style/register.scss
@@ -1,12 +1,8 @@
 @import 'common';
 
 .register_wrapper {
-	position: relative;
-	padding: 4rem;
-	padding-top: 7rem;
-	width: 38rem;
-	border: 1px solid $divider;
-	border-radius: 0.6rem;
+	width: 100%;
+	border-radius: inherit;
 	background: $background;
 
 	@include with_title;
@@ -15,9 +11,7 @@
 
 	.footer_bar {
 		display: flex;
-		align-items: center;
-		flex-direction: row-reverse;
-		padding-top: 2rem;
+		flex-flow: row-reverse;
 		width: 100%;
 	}
 }
