--- a/src/components/article/style/article_card.scss
+++ b/src/components/article/style/article_card.scss
@@ -27,7 +27,7 @@
 
 		.cover {
 			width: 100%;
-			height: 70%;
+			height: 61.8%;
 
 			> img {
 				width: 100%;
@@ -52,9 +52,11 @@
 				font-size: 1.2rem;
 
 				> h3 {
+					margin: 1rem 0;
 					padding-right: 1rem;
 					padding-left: 1rem;
 					font-size: 1.5rem;
+					line-height: 1.4em;
 				}
 			}
 
