--- a/src/components/markdown/style/markdown.scss
+++ b/src/components/markdown/style/markdown.scss
@@ -16,7 +16,7 @@
 	.code_wrapper {
 		display: block;
 		overflow-x: auto;
-		padding: 1rem 2rem;
+		padding: 2rem;
 		border-radius: 0.6rem;
 		background: $background_variant;
 
