--- a/src/views/articleList/style/index.module.scss
+++ b/src/views/articleList/style/index.module.scss
@@ -2,6 +2,10 @@
 	padding: 1rem;
 	padding-top: 5rem;
 
+	> div:first-child {
+		padding-right: 0;
+	}
+
 	.article_list {
 		display: flex;
 		flex-flow: wrap;
