chore: article like & dislike

--- a/src/components/article/style/article_card.scss
+++ b/src/components/article/style/article_card.scss
@@ -13,6 +13,7 @@
 		transition: transform $fast ease-out, box-shadow $fast ease-out;
 
 		h3 {
+			font-size: 1.6rem;
 			transition: color $fast;
 		}
 
