--- a/src/components/rightSider/style/article_stats_panel.scss
+++ b/src/components/rightSider/style/article_stats_panel.scss
@@ -1,19 +1,15 @@
-.article_stats_panel {
+@include use_themes('.article_stats_panel') {
 	cursor: pointer;
 
-	li {
+	.item {
 		color: $text_secondary;
 
-		&.active {
-			color: get_theme('primary');
-		}
-
-		span:last-child {
-			font-weight: bold;
+		&.actived {
+			color: $highlight;
 		}
 	}
 
-	svg {
+	svg:first-child {
 		margin-right: 2rem;
 		font-size: 2rem;
 	}
