--- a/src/components/rightSider/style/article_stats_panel.scss
+++ b/src/components/rightSider/style/article_stats_panel.scss
@@ -1,16 +1,21 @@
 @include use_themes('.article_stats_panel') {
-	cursor: pointer;
-
+	cursor: default;
 	.item {
+		border-radius: 0;
 		color: $text_secondary;
 
 		&.actived {
 			color: $highlight;
 		}
-	}
 
-	svg:first-child {
-		margin-right: 2rem;
-		font-size: 2rem;
+		svg:first-child {
+			margin-right: 2rem;
+			font-size: 2rem;
+		}
+
+		&:nth-child(1),
+		&:nth-child(2) {
+			cursor: pointer;
+		}
 	}
 }
