--- a/src/components/markdown/style/editor.scss
+++ b/src/components/markdown/style/editor.scss
@@ -16,7 +16,7 @@ $divider: $divider;
 			display: flex;
 			align-items: center;
 			justify-content: space-between;
-			min-width: 144px;
+			min-width: 14rem;
 
 			svg {
 				font-size: 2rem;
