--- a/src/components/rightSider/style/article_stats_panel.scss
+++ b/src/components/rightSider/style/article_stats_panel.scss
@@ -13,6 +13,10 @@
 			font-size: 2rem;
 		}
 
+		strong {
+			margin-left: 0.5rem;
+		}
+
 		&:nth-child(1),
 		&:nth-child(2) {
 			cursor: pointer;
