--- a/src/views/settings/style/options.scss
+++ b/src/views/settings/style/options.scss
@@ -3,10 +3,11 @@
 	width: 100%;
 
 	> h1 {
-		margin-top: 0;
-		margin-bottom: 2rem;
+		margin-top: 1rem;
+		margin-bottom: 1.6rem;
 		color: $text_primary;
-		font-size: 1.6rem;
+		font-weight: 500;
+		font-size: 1.4rem;
 	}
 
 	.container {
@@ -31,12 +32,13 @@
 			> span:first-child {
 				display: inline-flex;
 				align-items: center;
+				color: $text_secondary;
+				font-weight: 500;
 			}
 
 			.form_item {
-				display: inline-flex;
-				align-items: center;
 				margin: 0;
+				max-width: 24rem;
 			}
 		}
 	}
