chore: font-weight exactly

--- a/src/components/base/style/message.scss
+++ b/src/components/base/style/message.scss
@@ -18,7 +18,7 @@
 		border-radius: 0.6rem;
 		box-shadow: $default_shadow;
 		color: white;
-		font-weight: bold;
+		font-weight: 500;
 		font-size: 1.4rem;
 		cursor: pointer;
 		animation: slide-in $normal ease-out;
