--- a/src/components/markdown/style/editor.scss
+++ b/src/components/markdown/style/editor.scss
@@ -27,7 +27,7 @@ $divider: $divider;
 			.publish {
 				display: flex;
 				align-items: center;
-				font-weight: bold;
+				font-weight: 500;
 				font-size: 1.4rem;
 			}
 		}
