--- a/src/components/sider/style/menu.scss
+++ b/src/components/sider/style/menu.scss
@@ -4,13 +4,13 @@
 	}
 
 	.level1 {
-		font-weight: bold;
+		font-weight: 600;
 		font-size: 1.5rem;
 	}
 
 	.level2 {
 		padding-left: 5rem;
-		font-weight: bold;
+		font-weight: 500;
 		font-size: 1.4rem;
 	}
 
