--- a/src/components/header/style/branch.scss
+++ b/src/components/header/style/branch.scss
@@ -1,7 +1,7 @@
 @include use_themes('.branch') {
 	> span {
 		color: $highlight;
-		font-weight: bolder;
+		font-weight: 600;
 		font-size: 2.2rem;
 		font-family: SF Mono;
 	}
