--- a/src/components/header/style/search.scss
+++ b/src/components/header/style/search.scss
@@ -1,12 +1,64 @@
-$divider: $divider;
-
 .search {
 	position: absolute;
 	top: 5rem;
 	right: 2rem;
-	padding: 2rem;
-	width: 30rem;
-	height: 30rem;
+	padding: 0 0 1rem 0;
+	min-height: 8rem;
+	width: 32rem;
 	border: 1px solid $divider;
 	border-radius: 0.6rem;
+
+	.search_input_box {
+		padding: 2rem 2rem 1rem 2rem;
+	}
+
+	.result_box {
+		overflow-y: auto;
+		padding-top: 0;
+		max-height: 48rem;
+		width: 100%;
+
+		h1 {
+			margin: 5rem 0;
+			color: $text_secondary;
+			text-align: center;
+			font-size: 1.7rem;
+		}
+
+		h3 {
+			display: inline-block;
+			margin: 1rem 2.4rem;
+			height: 2rem;
+			font-size: 1.6rem;
+		}
+
+		.text {
+			overflow: hidden;
+			text-overflow: ellipsis;
+			white-space: nowrap;
+			font-size: 1.4rem;
+		}
+
+		.article_item {
+			justify-content: space-between;
+
+			&:hover {
+				color: $highlight;
+			}
+		}
+
+		.user_item {
+			height: 4.8rem;
+
+			> img {
+				margin-right: 2rem;
+				width: 3rem;
+				height: 3rem;
+				border-radius: 50%;
+				vertical-align: text-top;
+
+				object-fit: cover;
+			}
+		}
+	}
 }
