chore: enhanced password rules

--- a/src/components/header/style/search.scss
+++ b/src/components/header/style/search.scss
@@ -22,7 +22,8 @@
 			margin: 5rem 0;
 			color: $text_secondary;
 			text-align: center;
-			font-size: 1.7rem;
+			font-weight: 600;
+			font-size: 1.6rem;
 		}
 
 		h3 {
