--- a/src/components/modal/style/modal.scss
+++ b/src/components/modal/style/modal.scss
@@ -22,8 +22,7 @@
 	.content {
 		position: relative;
 		padding: 4rem;
-		min-width: 38rem;
-		max-width: 44rem;
+		width: 40rem;
 		border-radius: 0.6rem;
 	}
 }
